...
                ),
              ),
              SizedBox(height: subtitleSpacing),
              SizedBox(height: buttonSpacing),
              // Get Started Button
              HoverButton(
                key: const ValueKey('onboardingNextButton'),
                onTap: () {
                  context.read<OnboardingPageBloc>().add(
                    OnboardingGetStartedPressed(isWebLayout: false),
                  );
                },
                text: 'Get Started',
...
                          height: 1.5,
                        ),
                      ),
                      const SizedBox(height: 40),
                      // Get Started Button
                      HoverButton(
                        key: const ValueKey('onboardingNextButton_web'),
                        onTap: () {
                          context.read<OnboardingPageBloc>().add(
                            OnboardingGetStartedPressed(isWebLayout: true),
                          );
                        },
                        text: 'Get Started',
...
