...
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  // Product Name
                  _buildLabel("Product Name"),
                  _buildTextField(
                    key: const ValueKey('productNameField'),
                    controller: _nameController,
                    hintText: "Enter product name",
                    icon: Icons.fastfood,
                    onChanged: (value) => context.read<SellerProductBloc>().add(
                      ProductNameChanged(value),
                    ),
...
                  ),
                  const SizedBox(height: 20),

                  // Price
                  _buildLabel("Price"),
                  _buildTextField(
                    key: const ValueKey('productPriceField'),
                    controller: _priceController,
                    hintText: "Enter price (${AppConstants.currencySymbol})",
                    icon: AppConstants.currencyIcon,
                    keyboardType: const TextInputType.numberWithOptions(
                      decimal: true,
                    ),
...
                  ),
                  const SizedBox(height: 20),

                  // Description
                  _buildLabel("Description"),
                  _buildTextField(
                    key: const ValueKey('productDescriptionField'),
                    controller: _descriptionController,
                    hintText: "Enter product description",
                    icon: Icons.description,
                    maxLines: 3,
                    onChanged: (value) => context.read<SellerProductBloc>().add(
                      ProductDescriptionChanged(value),
...

  Widget _buildAddProductButton(BuildContext context, AddProductStatus status) {
    return Center(
      child: MouseRegion(
        cursor: SystemMouseCursors.click,
        child: GestureDetector(
          key: const ValueKey('productSubmitButton'),
          onTap: status == AddProductStatus.loading ? null : _submitForm,
          child: Container(
            width: double.infinity,
            height: 52,
            decoration: BoxDecoration(
              color: status == AddProductStatus.loading
...
